--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 				<groupId>org.assertj</groupId>
 				<artifactId>assertj-assertions-generator-maven-plugin</artifactId>
 				<version>2.0.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate-assertions</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<classes>
 						<class>org.github.lokiafro.Player</class>
